added API for reading audio file tags

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -6,7 +6,7 @@ LABEL description="Latest Python Alpine image with numpy and vamp"
 
 # install_os_deps
 RUN apt-get update
-RUN apt-get install -y wget build-essential zlib1g-dev libssl-dev libffi-dev libmysqlclient-dev gcc ffmpeg libavcodec-extra-53
+RUN apt-get install -y wget build-essential zlib1g-dev libssl-dev libffi-dev libmysqlclient-dev gcc libav-tools
 
 # install numpy and vamp
 RUN pip install numpy
