added reading memory parameter from docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,3 +45,4 @@ extractor_host_1:
     - EXTRACTION_BROKER_CONN_POOL_SIZE=4
     - EXTRACTION_SOFT_TIME_LIMIT_SECONDS=300
     - EXTRACTION_HARD_TIME_LIMIT_SECONDS=600
+    - EXTRACTION_MEMORY_LIMIT_MB=128
