--- a/scripts/docker-compose-ci.yml
+++ b/scripts/docker-compose-ci.yml
@@ -36,6 +36,12 @@ extractor_host_1:
   volumes:
     - "../resources/vamp:/root/vamp"
     - "../resources/audio:/audio"
+  environment:
+    - EXTRACTION_CONCURRENCY=1
+    - EXTRACTION_BROKER_CONN_POOL_SIZE=2
+    - EXTRACTION_SOFT_TIME_LIMIT_SECONDS=60
+    - EXTRACTION_HARD_TIME_LIMIT_SECONDS=120
+    - EXTRACTION_MEMORY_LIMIT_MB=32
 testcases:
   image: "endlessdrones/audiopyle-testcases"
   hostname: "testcases"
