corrected build logging

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ services:
 before_script:
   - chmod u+x **/*.sh
   - scripts/setup.sh
-  - cd commons && mypy --ignore-missing-imports --verbose -p commons && cd ..
-  - cd coordinator && mypy --ignore-missing-imports --verbose -p coordinator && cd ..
-  - cd extractor && mypy --ignore-missing-imports --verbose -p extractor && cd ..
+  - cd commons && mypy --ignore-missing-imports -p commons && cd ..
+  - cd coordinator && mypy --ignore-missing-imports -p coordinator && cd ..
+  - cd extractor && mypy --ignore-missing-imports -p extractor && cd ..
   - cd commons && tox && cd ..
 
 script:
