--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,9 +1,4 @@
 engines:
-  duplication:
-    enabled: true
-    config:
-      languages:
-      - python
   fixme:
     enabled: true
   pep8:
@@ -25,3 +20,4 @@ exclude_paths:
 - "**/test_*"
 - "**/setup.py"
 - "**/resources/**"
+- "**/*-coverage/**"
