corrected base image

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -6,10 +6,14 @@ LABEL description="Latest Python Alpine image with numpy and vamp"
 
 # install_os_deps
 RUN apt-get update
-RUN apt-get install -y build-essential zlib1g-dev libssl-dev libffi-dev libmysqlclient-dev gcc libav-tools
+RUN apt-get install -y build-essential gcc
 
 # install numpy and vamp
 RUN pip install numpy
 RUN pip install vamp
+
+RUN apt-get purge -y build-essential gcc
+RUN apt-get clean
+RUN apt-get autoclean
 
 CMD ["/bin/bash"]
