--- a/commons/tox.ini
+++ b/commons/tox.ini
@@ -1,15 +1,13 @@
 [tox]
-envlist = py3
+envlist = py{36}
+
 [testenv]
-sitepackages = True
+sitepackages = False
 deps =
-    -rrequirements.txt
-    nose
-    coverage
-recreate = True
+    mypy
+    assertpy
+    pytest
+    pytest-cov
 commands =
-    nosetests -v \
-        --cover-erase --with-coverage --cover-inclusive \
-        --cover-branches --cover-package=commons --cover-min-percentage=0 \
-        --cover-xml --cover-xml-file=audiopyle-commons-coverage.xml \
-        --cover-html --cover-html-dir=audiopyle-commons-coverage
+    mypy --ignore-missing-imports -p commons
+    py.test -v --cov=commons
