--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 
 before_script:
   - chmod u+x **/*.sh
-  - pip install numpy vamp tox
+  - pip install numpy vamp tox mypy
 
 script:
   - scripts/run_type_check.sh
