added directories for extracted results

--- a/coordinator/Dockerfile
+++ b/coordinator/Dockerfile
@@ -4,6 +4,8 @@ MAINTAINER mkorzeniowski93@gmail.com
 LABEL version="0.1"
 LABEL description="Image containing Coordinator module of an audiopyle app"
 
+# EXTRACTOR DIRS ARE INHERITED
+
 # SET WORKDIR
 RUN mkdir -p /audiopyle/api
 WORKDIR /audiopyle/api
