--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -6,7 +6,7 @@ LABEL description="Latest Python Alpine image with numpy and vamp"
 
 # install_os_deps
 RUN apt-get update
-RUN apt-get install -y build-essential gcc
+RUN apt-get install -y build-essential gcc libav-tools
 
 # install numpy and vamp
 RUN pip install numpy
