--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ coordinator_host:
     - "8080:8080"
   volumes:
     - "./resources/vamp:/root/vamp:ro"
-    - "./resources/audio:/audio:ro"
+    - "./resources/audio:/root/audio:ro"
   environment:
     - BLACKLISTED_PLUGINS=vamp-example-plugins:zerocrossing,vamp-example-plugins:powerspectrum
 extractor_host_1:
@@ -37,7 +37,7 @@ extractor_host_1:
     - mysql_host
   volumes:
     - "./resources/vamp:/root/vamp:ro"
-    - "./resources/audio:/audio:ro"
+    - "./resources/audio:/root/audio:ro"
     - "./resources/results:/root/result"
   environment:
     - EXTRACTION_CONCURRENCY=2
