--- a/scripts/docker-compose-ci.yml
+++ b/scripts/docker-compose-ci.yml
@@ -26,7 +26,7 @@ coordinator_host:
     - "8080:8080"
   volumes:
     - "../resources/vamp:/root/vamp:ro"
-    - "../resources/audio:/audio:ro"
+    - "../resources/audio:/root/audio:ro"
 extractor_host_1:
   image: "endlessdrones/audiopyle-extractor"
   hostname: "extractor_host_1"
@@ -35,7 +35,7 @@ extractor_host_1:
     - mysql_host
   volumes:
     - "../resources/vamp:/root/vamp:ro"
-    - "../resources/audio:/audio:ro"
+    - "../resources/audio:/root/audio:ro"
     - "../resources/result:/root/result"
 testcases:
   image: "endlessdrones/audiopyle-testcases"
