removed typo in docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ extractor_host_1:
   volumes:
     - "./resources/vamp:/root/vamp:ro"
     - "./resources/audio:/root/audio:ro"
-    - "./resources/results:/root/result"
+    - "./resources/result:/root/result"
   environment:
     - EXTRACTION_CONCURRENCY=2
     - EXTRACTION_BROKER_CONN_POOL_SIZE=4
