--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ coordinator_host:
     - "./resources/vamp:/root/vamp:ro"
     - "./resources/audio:/root/audio:ro"
   environment:
-    - BLACKLISTED_PLUGINS=vamp-example-plugins:zerocrossing,vamp-example-plugins:powerspectrum,cqvamp:cqvamp,cqvamp:cqvampmidi,mtg-melodia:melodiaviz,pyin:yin,qm-vamp-plugins:qm-adaptivespectrogram,qm-vamp-plugins:qm-dwt,vamp-libxtract:amdf,vamp-libxtract:asdf,vamp-libxtract:autocorrelation,vamp-libxtract:dct,vamp-libxtract:spectrum,silvet:silvet,pyin:pyin
+    - BLACKLISTED_PLUGINS=vamp-example-plugins:zerocrossing,vamp-example-plugins:powerspectrum,cqvamp:cqvamp,cqvamp:cqvampmidi,mtg-melodia:melodiaviz,pyin:yin,qm-vamp-plugins:qm-adaptivespectrogram,qm-vamp-plugins:qm-dwt,vamp-libxtract:amdf,vamp-libxtract:asdf,vamp-libxtract:autocorrelation,vamp-libxtract:dct,vamp-libxtract:spectrum,silvet:silvet,pyin:pyin,qm-vamp-plugins:qm-tonalchange
 extractor_host_1:
   image: "endlessdrones/audiopyle-extractor"
   hostname: "extractor_host_1"
