--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,13 +20,17 @@ services:
     ports:
       - "3306:3306"
   coordinator:
-    image: "endlessdrones/audiopyle-coordinator"
+    build:
+      context: ./coordinator
+      dockerfile: Dockerfile
+    image: "endlessdrones/audiopyle-coordinator:latest"
     hostname: "coordinator"
     ports:
       - "8080:8080"
     volumes:
-      - "/home/mat/vamp:/root/vamp:ro"
-      - "/home/mat/projects/resources_audiopyle:/root/audio:ro"
+      - "./resources/vamp:/root/vamp:ro"
+      - "./resources/audio:/root/audio:ro"
+      - "./resources/result:/root/result"
     environment:
       - BLACKLISTED_PLUGINS=vamp-example-plugins:zerocrossing,vamp-example-plugins:powerspectrum,cqvamp:cqvamp,cqvamp:cqvampmidi,mtg-melodia:melodiaviz,pyin:yin,qm-vamp-plugins:qm-adaptivespectrogram,qm-vamp-plugins:qm-dwt,vamp-libxtract:amdf,vamp-libxtract:asdf,vamp-libxtract:autocorrelation,vamp-libxtract:dct,vamp-libxtract:spectrum,silvet:silvet,pyin:pyin,qm-vamp-plugins:qm-tonalchange,match-vamp-plugin:match,cqvamp:cqchromavamp
       - RABBITMQ_SERIVCE_HOST=rabbitmq
@@ -35,11 +39,14 @@ services:
     depends_on:
       - rabbitmq
   extractor_1:
-    image: "endlessdrones/audiopyle-extractor"
+    build:
+      context: ./extractor
+      dockerfile: Dockerfile
+    image: "endlessdrones/audiopyle-extractor:latest"
     hostname: "extractor_1"
     volumes:
-      - "/home/mat/vamp:/root/vamp:ro"
-      - "/home/mat/projects/resources_audiopyle:/root/audio:ro"
+      - "./resources/vamp:/root/vamp:ro"
+      - "./resources/audio:/root/audio:ro"
       - "./resources/result:/root/result"
     environment:
       - EXTRACTION_CONCURRENCY=4
