--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,8 @@ after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
     scripts/push-base-image.sh;
     fi
+
+notifications:
+  email:
+    on_success: never
+    on_failure: change
