added script (downloaded from https://github.com/vishnubob/wait-for-it) for coordinator app so it waits till MySQL DB is up

--- a/coordinator/Dockerfile
+++ b/coordinator/Dockerfile
@@ -19,5 +19,8 @@ COPY . .
 # INSTALL AUDIOPYLE COORDINATOR
 RUN pip install --no-cache-dir .
 
+
+RUN chmod u+x ./wait-for-it.sh
+
 # DEFINE ENTRYPOINT AS COORDINATOR API
-ENTRYPOINT ["coordinator"]
+ENTRYPOINT ["./wait-for-it.sh", "-t", "30", "mysql:3306", "--", "coordinator"]
