added link to script wait-for-it

--- a/commons/Dockerfile
+++ b/commons/Dockerfile
@@ -8,7 +8,7 @@ LABEL description="Image containing common functionalities of an audiopyle app"
 RUN mkdir -p /audiopyle/commons
 WORKDIR /audiopyle/commons
 
-# INCLUDE SCRIPT FOR WAITING FOR OTHER SERVICE UNDER /audiopyle
+# INCLUDE SCRIPT (https://github.com/vishnubob/wait-for-it) FOR WAITING FOR OTHER SERVICE UNDER /audiopyle
 COPY ./wait-for-it.sh /audiopyle/wait-for-it.sh
 RUN chmod u+x /audiopyle/wait-for-it.sh
 
