--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - "./resources/vamp:/root/vamp:ro"
       - "./resources/audio:/root/audio:ro"
     environment:
-      - BLACKLISTED_PLUGINS=qm-dwt:qm-vamp-plugins:wcoeff,silvet:silvet:templates,melodiaviz:mtg-melodia:contoursall,melodiaviz:mtg-melodia:saliencefunction,melodiaviz:mtg-melodia:contoursmelody,qm-adaptivespectrogram:qm-vamp-plugins:output,pyin:pyin:candidatesalience,yin:pyin:salience,dct:vamp-libxtract:dct,amdf:vamp-libxtract:amdf,asdf:vamp-libxtract:asdf,autocorrelation:vamp-libxtract:autocorrelation,powerspectrum:vamp-example-plugins:powerspectrum,silvet:silvet:timefreq,cqvampmidi:cqvamp:constantq,bbc-rhythm:bbc-vamp-plugins:autocor,spectrum:vamp-libxtract:amplitudes,pyin:pyin:f0candidates,pyin:pyin:f0probs,bbc-rhythm:bbc-vamp-plugins:average,bbc-rhythm:bbc-vamp-plugins:onset_curve,bbc-rhythm:bbc-vamp-plugins:diff,cqchromavamp:cqvamp:chromagram,harmonic_spectrum:vamp-libxtract:amplitudes,peak_spectrum:vamp-libxtract:amplitudes
+      - BLACKLISTED_PLUGINS=qm-vamp-plugins:qm-dwt:wcoeff,mtg-melodia:melodiaviz:saliencefunction,mtg-melodia:melodiaviz:contoursmelody,mtg-melodia:melodiaviz:contoursall,qm-vamp-plugins:qm-adaptivespectrogram:output,pyin:yin:salience,vamp-libxtract:autocorrelation:autocorrelation,vamp-libxtract:asdf:asdf,vamp-libxtract:dct:dct,vamp-libxtract:amdf:amdf,vamp-example-plugins:powerspectrum:powerspectrum,cqvamp:cqvampmidi:constantq,bbc-vamp-plugins:bbc-rhythm:autocor,vamp-libxtract:spectrum:amplitudes
       - RABBITMQ_SERIVCE_HOST=rabbitmq
       - MYSQL_SERVICE_HOST=mysql
       - MYSQL_SERVICE_PORT=3306
