--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
+      - "./resources/config:/root/config:ro"
       - "./resources/vamp:/root/vamp:ro"
       - "./resources/audio:/root/audio:ro"
     environment:
