--- a/scripts/docker-compose-ci.yml
+++ b/scripts/docker-compose-ci.yml
@@ -23,9 +23,9 @@ services:
     ports:
       - "8080:8080"
     volumes:
+      - "./resources/config:/root/config:ro"
       - "../resources/vamp:/root/vamp:ro"
       - "../resources/audio:/root/audio:ro"
-      - "../resources/result:/root/result"
     depends_on:
       - rabbitmq
     environment:
