introduce changes request in PR. Separate base image build to basepackage step

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,7 @@ before_script:
   - make config
 
 script:
-  - make test
-  - make package
-  - make verify
+  - make all
 
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
