implemented audio volume normalization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,7 @@ services:
       - "./resources/audio:/root/audio:ro"
     environment:
       - EXTRACTION_FULL_RESULT_PERSISTENCE=1
+      - EXTRACTION_NORMALIZE_AUDIO_VOLUME_TO_DBFS=-20
       - EXTRACTION_CONCURRENCY=4
       - EXTRACTION_BROKER_CONN_POOL_SIZE=4
       - EXTRACTION_SOFT_TIME_LIMIT_SECONDS=240
