split travis stages to measure time of specific steps, corrected excluded packages in setup.py (scripts directory was not package cause it doesnt have init.py)

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,11 @@ before_script:
   - make config
 
 script:
-  - make all
+  - make test
+  - make package
+  - make basedocker
+  - make docker
+  - make verify
 
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
