--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - "3306:3306"
     volumes:
       - "./resources/config/mysql:/etc/mysql/conf.d:ro"
-  coordinator:
+  api:
     build:
       context: ""
       dockerfile:
@@ -54,13 +54,13 @@ services:
       - MYSQL_SERVICE_PORT=3306
     depends_on:
       - rabbitmq
-  extractor_1:
+  worker_1:
     networks:
       default:
         aliases:
-          - extractor_1.local
+          - worker_1.local
     image: "emkor/audiopyle-worker:latest"
-    hostname: "extractor_1"
+    hostname: "worker_1"
     volumes:
       - "./resources/vamp:/root/vamp:ro"
       - "./resources/audio:/root/audio:ro"
