--- a/scripts/Dockerfile_api
+++ b/scripts/Dockerfile_api
@@ -2,15 +2,10 @@ FROM emkor/audiopyle-lib
 
 MAINTAINER emkor93@gmail.com
 LABEL version="0.1"
-LABEL description="Image containing Coordinator module of an audiopyle app"
+LABEL description="Image containing API module of an Audiopyle app"
 
-# EXTRACTOR DIRS ARE INHERITED
-
-# SET WORKDIR
-WORKDIR /audiopyle
-
-# ESPOSE HTTP PORT
+# EXPOSE HTTP PORT
 EXPOSE 8080
 
-# DEFINE ENTRYPOINT AS COORDINATOR API
+# DEFINE ENTRY POINT AS AUDIOPYLE API
 ENTRYPOINT ["/audiopyle/wait-for-it.sh", "-t", "15", "mysql:3306", "--", "/audiopyle/wait-for-it.sh", "-t", "15", "rabbitmq:5672", "--", "audiopyle-api"]
