--- a/scripts/Dockerfile_testcases
+++ b/scripts/Dockerfile_testcases
@@ -7,4 +7,4 @@ LABEL description="Image containing integration tests"
 # CREATE AND SET DIRECTORIES
 WORKDIR /audiopyle
 
-ENTRYPOINT ["/audiopyle/wait-for-it.sh", "-t", "30", "coordinator:8080", "--", "audiopyle-testcases"]
+ENTRYPOINT ["/audiopyle/wait-for-it.sh", "-t", "30", "api:8080", "--", "audiopyle-testcases"]
