--- a/scripts/Dockerfile_worker
+++ b/scripts/Dockerfile_worker
@@ -2,18 +2,10 @@ FROM emkor/audiopyle-lib
 
 MAINTAINER emkor93@gmail.com
 LABEL version="0.1"
-LABEL description="Image containing extractor module of an audiopyle app"
-
-# SET WORKDIR
-WORKDIR /audiopyle
-
-# CREATE DIRECTORY FOR INPUT FILES
-RUN mkdir -p /root/audio
-RUN mkdir -p /root/vamp
-RUN mkdir -p /root/result
+LABEL description="Image containing worker module of an Audiopyle app"
 
 # EXPOSE PORTS
 EXPOSE 8080
 
-# DEFINE ENTRYPOINT AS EXTRACTOR API
+# DEFINE ENTRY POINT AS AUDIOPYLE WORKER
 ENTRYPOINT ["/audiopyle/wait-for-it.sh", "-t", "15", "rabbitmq:5672", "--", "audiopyle-worker"]
