--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -54,13 +54,13 @@ services:
       - MYSQL_SERVICE_PORT=3306
     depends_on:
       - rabbitmq
-  worker_1:
+  worker:
     networks:
       default:
         aliases:
-          - worker_1.local
+          - worker.local
     image: "emkor/audiopyle-worker:latest"
-    hostname: "worker_1"
+    hostname: "worker"
     volumes:
       - "./resources/vamp:/root/vamp:ro"
       - "./resources/audio:/root/audio:ro"
