--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -42,9 +42,9 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - "./resources/config:/root/config:ro"
-      - "./resources/vamp:/root/vamp:ro"
-      - "./resources/audio:/root/audio:ro"
+      - "./resources/config:/home/audiopyle/config:ro"
+      - "./resources/vamp:/home/audiopyle/vamp:ro"
+      - "./resources/audio:/home/audiopyle/audio:ro"
     environment:
       - RABBITMQ_SERIVCE_HOST=rabbitmq.local
       - MYSQL_SERVICE_HOST=mysql.local
@@ -59,8 +59,8 @@ services:
     image: "emkor/audiopyle-worker:latest"
     hostname: "worker"
     volumes:
-      - "./resources/vamp:/root/vamp:ro"
-      - "./resources/audio:/root/audio:ro"
+      - "./resources/vamp:/home/audiopyle/vamp:ro"
+      - "./resources/audio:/home/audiopyle/audio:ro"
     environment:
       - EXTRACTION_FULL_RESULT_PERSISTENCE=1
       - EXTRACTION_NORMALIZE_AUDIO_VOLUME_TO_DBFS=-20
