implemented pushing all the images to public docker hub

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
 
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
-    scripts/push-base-image.sh;
+    scripts/push_images.sh $DOCKER_USERNAME $DOCKER_PASSWORD;
     fi
 
 notifications:
