--- a/audiopyle/open_api_docs.yml
+++ b/audiopyle/open_api_docs.yml
@@ -92,6 +92,10 @@ paths:
             type: array
             items:
               type: string
+          examples: [
+            "102bpm_drum_loop.flac",
+            "102bpm_drum_loop.mp3"
+          ]
   "/audio/{file_name}":
     get:
       description: Returns list of available audio file names
@@ -105,14 +109,13 @@ paths:
           description: "Details of given audio file"
           schema:
             "$ref": "#/definitions/FileDetail"
-          examples:
-            application/json: {
-                  created_on: "2018-08-16 08:58:49",
-                  file_name: "102bpm_drum_loop.flac",
-                  last_access: "2018-08-16 08:58:49",
-                  last_modification: "2018-08-16 08:58:49",
-                  size: 111690
-              }
+          examples: {
+            created_on: "2018-08-16 08:58:49",
+            file_name: "102bpm_drum_loop.flac",
+            last_access: "2018-08-16 08:58:49",
+            last_modification: "2018-08-16 08:58:49",
+            size: 111690
+          }
         400:
           description: "file_name parameter was not provided in URL"
         404:
@@ -130,15 +133,14 @@ paths:
           description: Id3 tag of given audio file
           schema:
             "$ref": "#/definitions/AudioTag"
-          examples:
-            application/json: {
-                  album: "Unknown Album",
-                  artist: "Unknown Artist",
-                  date: 2017,
-                  genre: "Unknown Genre",
-                  title: "Unknown Title",
-                  track: 1
-              }
+          examples: {
+            album: "Unknown Album",
+            artist: "Unknown Artist",
+            date: 2017,
+            genre: "Unknown Genre",
+            title: "Unknown Title",
+            track: 1
+          }
         204:
           description: Given audio file does not have Id3 tags
         400:
@@ -155,16 +157,13 @@ paths:
             type: array
             items:
               "$ref": "#/definitions/ExtractionRequest"
-          examples:
-            application/json: [
-                  {
-                      "audio_file_name": "102bpm_drum_loop.flac",
-                      "metric_config": null,
-                      "plugin_config": null,
-                      "plugin_full_key": "vamp-example-plugins:spectralcentroid:logcentroid",
-                      "uuid": "0b04c1b3-b366-5145-9248-6cb118d3be99"
-                  }
-              ]
+          examples: [{
+                       "audio_file_name": "102bpm_drum_loop.flac",
+                       "metric_config": null,
+                       "plugin_config": null,
+                       "plugin_full_key": "vamp-example-plugins:spectralcentroid:logcentroid",
+                       "uuid": "0b04c1b3-b366-5145-9248-6cb118d3be99"
+                     }]
         412:
           description: Audio files directory or VAMP plugins directory is empty; could not generate requests
   "/config/metric":
@@ -185,5 +184,11 @@ paths:
           description: Content of plugin config JSON file
           schema:
             "$ref": "#/definitions/PluginConfig"
+          examples: {
+            "vamp-example-plugins:amplitudefollower:amplitude": {
+              "block_size":4096,
+              "step_size":4096
+            }
+          }
         404:
           description: There was no plugin config file found
